apps/production/papra/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
  namespace: papra
spec:
  template:
    spec:
      containers:
        - name: papra
