apps/production/papra/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra-route
  namespace: papra
spec:
  hostnames:
    - docs.fanen.dk
